2011-07-01  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c (register_service): Ensure that port
	version is set before registering it.

2011-06-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/arglists.c (arg_set_name, arglist2str): Removed
	now unused functions.

	* misc/arglists.h: Removed protos accordingly.

2011-06-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvti.c (nvti_add_sign_key_id): New.

	* base/nvti.h: Added proto accordingly.

2011-06-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/store.c (store_load_plugin): Removed conversion of
	".nes" to ".nasl" for dependencies. When a cache file
	is created, the conversion is always done already.
	This change makes it mandatory to remove the old
	cache when migrating from OpenVAS-4 to OpenVAS-5
	in order to ensure to not have any old cache file
	with ".nes" somewhere.

2011-06-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (plug_require_key, plug_mandatory_key,
	plug_exclude_key, plug_require_port, plug_require_udp_port,
	plug_set_dep): Replace intermediate step of converting csv
	strings to arglist and back again just for adding one entry
	by direct string modification.

2011-06-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Enforce that timestamps for newly cached files are identical with
	those of the original NVTs. This prevents cache issues for rare cases
	where the cache file was erroneously considered new than an update
	NVT.

	* base/nvti.c (nvti_to_keyfile): Set the timestamp of the cache file
	to the timestamp of the original NVT.

	* base/nvticache.c (nvticache_get): Accept caches with the same
	timestamp as the original file.

2011-06-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta2.

2011-06-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 5.0+beta1 release.
